--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"uniqid": "^5.4.0",
 		"web-vitals": "^2.1.4"
 	},
-	"homepage": "http://itsMe-ThatOneGuy.github.io/cv-project/static",
+	"homepage": "http://itsMe-ThatOneGuy.github.io/cv-project",
 	"scripts": {
 		"start": "react-scripts start",
 		"predeploy": "npm run build",
